# test1

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  README.md  flash  release
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  AUDIO_CAPTURE.md  MVS_MV1C_DIGITAL_AUDIO.md  MVS_MV1C_DIGITAL_VIDEO.md  OSD_IMPLEMENTATION.md  SESSION_2025-11-30.md
hardware/neopico-hd/: neopico-hd.kicad_dru  neopico-hd.kicad_prl  neopico-hd.kicad_pro  neopico-hd.kicad_sch
scripts/: capture_with_screen.sh  deploy.sh  run_audio_test.sh  test_audio.sh
src/: CMakeLists.txt  audio_capture.c  audio_capture.pio  audio_test.c  dvi_test.c  main.c  main_dvi.c  mvs_pins.h  mvs_sync.pio  neopico_config.h  tusb_config.h  usb_descriptors.c
src/audio/: audio_buffer.h  audio_common.h  audio_pipeline.c  audio_pipeline.h  audio_subsystem.c  dc_filter.c  i2s_capture.c  i2s_capture.h  i2s_capture.pio  lowpass.c  lowpass.h  src.c  src.h
src/osd/: font_8x8.h  osd.c  osd.h
src/video/: hardware_config.h  line_ring.h  video_buffers.h  video_capture.c  video_capture.h  video_capture.pio  video_config.h  video_pipeline.c  video_pipeline.h
viewer/: adc_measure.py  analyze_audio.py  audio_test.py  main.py  plot_audio.py  test_audio.py
